# GPTLink

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  test.py
config/: __init__.py  environment.py
extensions/gpt/: __init__.py
extensions/mongo/: __init__.py
gptlink_gui/: package-lock.json  package.json
gptlink_gui/src/: App.js  App.jsx
gptlink_gui/src/components/chat/: Home.jsx
gptlink_gui/src/components/config/: config.jsx
gptlink_gui/src/components/home/: Home.js  Home.jsx  Test.jsx
gptlink_gui/src/components/login/: Login.jsx
gptlink_gui/src/components/tools/: Adaption.js  Chat.js  Chat.jsx  chat.css
routers/: front.py
