[tool.poetry]
name = "gtplink"
version = "0.1.0"
description = "Empower GPT to Run Anywhere: Supporting gpt-3.5-turbo and gpt-4"
authors = ["Cyberbolt <735245473@qq.com>"]
license = "Cyberbolt <dtconlyone@gmail.com>"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.94.1"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
